@@ -35,6 +35,7 @@ Template for new versions:
 - `open-legends`: don't intercept text bound for vanilla search widgets
 - `gui/unit-info-viewer`: correctly display skill levels when rust is involved
 - `build-now`: fix error when building buildings that (in previous DF versions) required the architecture labor
+- `prioritize`: fix incorrect loading of persisted data on some OS types
 
 ## Misc Improvements
 - `build-now`: if `suspendmanager` is running, run an unsuspend cycle immediately before scanning for buildings to build
